# irssi-tg

./: .gitignore  .saved_windows.txt  Cargo.toml  README.md  themes.ini
src/: main.rs
